fix layout bugs and update resume (#2)

--- a/src/assets/styles/components/contactSection.less
+++ b/src/assets/styles/components/contactSection.less
@@ -67,5 +67,10 @@
         }
       }
     }
+    @media only screen and (max-height: 800px) { 
+      .contact-social-group {
+        margin-top: 3rem;
+      }
+    }
   }
 }
